refactor: class<?> newInstance depeated tackled, and some code refactor
Signed-off-by: licho <lecho.sun@gmail.com>